feat: add projects listing to index
Adds a list of projects on the index, allowing the user to switch easily between projects.
